# cautious-enigma

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  Requirements.txt  SECURITY.md  data_loader.py  deployment.yaml  docker-compose.yml  network-policy.yaml  pyproject.toml  requirements-dev.txt  service.yaml
.github/: CODEOWNERS
.github/workflows/: ci.yml  security.yml  supply-chain.yml
app/: api.py  server.py
benchmarks/: run_benchmark.py
docs/: AUDIT.md  DEPLOYMENT.md  ENGINEERING_QUALITY.md  PRODUCTION_CHECKLIST.md
src/models/: inference.py
src/pipelines/: inference_pipeline.py  preprocess.py
src/utils/: model_registry.py
tests/: test_api.py  test_benchmark.py  test_model_registry.py
